--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -1,5 +1,13 @@
 /** Custom styles */
 
+ul {
+    margin-bottom: 0px;
+}
+
+li {
+    margin-bottom: 1rem;
+}
+
 /* LISTING PAGE */
 
 .curriculum-listing {
@@ -63,26 +71,26 @@
 
 .navbar {
     border: 0px;
-    background: linear-gradient(104.24deg,#1a74fc -4.4%,#4ef286 112.23%);
+    background: linear-gradient(104.24deg, #1a74fc -4.4%, #4ef286 112.23%);
 }
 
 [data-dark-mode] .navbar {
     background: rgba(33, 37, 41, 0.95);
 }
 
-.offcanvas .show.nav-link.lp{
+.offcanvas .show.nav-link.lp {
     color: black !important;
 }
 
-.nav-link.lp{
+.nav-link.lp {
     color: white;
 }
 
-.nav-link.lp a:hover{
+.nav-link.lp a:hover {
     color: white !important;
 }
 
-.nav a:hover{
+.nav a:hover {
     text-decoration: underline;
     color: white !important;
 }
@@ -98,19 +106,19 @@
 }
 
 @media (max-width: 767px) {
-    .nav-link.lp{
+    .nav-link.lp {
         color: black;
     }
-    
-    .nav-link.lp a:hover{
+
+    .nav-link.lp a:hover {
         color: black !important;
     }
-    
-    .nav a:hover{
+
+    .nav a:hover {
         text-decoration: underline;
         color: black !important;
     }
-    
+
     .nav-link.lp.active {
         color: black;
         text-decoration: underline;
@@ -155,7 +163,7 @@
     color: black;
 }
 
-[data-dark-mode]  .landing-steps a {
+[data-dark-mode] .landing-steps a {
     color: white;
 }
 
